# AdaptiveShielding

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  client.sh  codestyle.xml  index.md  plot.py  run.sh  run_docker.bat  run_docker.sh
data/exp_basic/: gui-settings.cfg  one_junction.dist.rou.xml  one_junction.dist.rou.xml.tmp  one_junction.net.xml  one_junction.sumo.cfg
data/exp_bus/: bus.trips.xml  osm.net.xml  osm.passenger.trips.xml  osm.polycfg  osm.sumocfg  shieldIDs.txt  uq.trips.xml
data/exp_helsinki/: block.txt  more.trips.xml  osm.netccfg  osm.poly.xml  osm.sumocfg  shieldIDs.txt
include/: Controller.h  Environment.h  ISimulationObject.h  ISumo.h  IconManager.hpp  LaneMapper.h  LaneTree.h  PhaseMapper.h  STORMConnector.h  SUMOConnector.h  Shield.h  ShieldConfig.h  ShieldModelGenerator.h  Simulation.h  Strategy.h  TrafficIncidentManager.h  TrafficLight.h  Util.h
lib/: TraCIAPI.h  TraCIDefs.h
src/: Controller.cpp  Environment.cpp  LaneMapper.cpp  LaneTree.cpp  PhaseMapper.cpp  STORMConnector.cpp  SUMOConnector.cpp  Shield.cpp  ShieldConfig.cpp  ShieldModelGenerator.cpp  Simulation.cpp  Strategy.cpp  TrafficIncidentManager.cpp  TrafficLight.cpp  Util.cpp  main.cpp
test/data/test_exp_basic/log/: test.log.gneJ1  test.out
test/data/test_exp_basic/log.v2/: shield_log  shield_log.gneJ1  test.log.gneJ1  test.out
test/data/test_exp_bus/log/: test.log.1377211669  test.log.GS_1377211666  test.out  (+3 more)
test/script/: check.sh  environment.sh  test_exp_basic.sh  test_exp_bus.sh  test_exp_helsinki.sh
(+7 files in other folders)
